# plex_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
plex/: __init__.py
plex/api/: __init__.py  api.py
plex/api/v1/routes/: __init__.py  actions.py  results.py  sources.py
plex/api/v1/schemas/: Action.py  Source.py
plex/cli/: __init__.py  cli.py
plex/core/: __init__.py  analyzer.py  constants.py  types.py  utils.py
plex/core/db/: in_memory_db.py  utils.py
plex/core/db/collections/: source.py
plex/core/langchain/: llm.py
plex/core/qdrant/: utils.py
plex/shared/db/: migrations.py
plex/shared/exceptions/: Source.py  __init__.py  analyzer.py  results.py  source.py
