[tool.poetry]
name = "plex"
version = "0.1.0"
description = "An AI workflow that extracts consolidated profit & loss from financial statements"
readme = "README.md"
authors = ["Ishara Dissanayake <thisismaduishara@gmail.com>"]
packages = [{ include = "plex" }]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.scripts]
plex = "plex:run"

[tool.poetry.dependencies]
python = ">=3.11.11,<3.12"
python-dotenv = "^1.0.1"
click = "^8.1.8"
sanic = "^24.12.0"
sanic-ext = "^23.12.0"
pydantic = "^2.8.2"
langchain-community = "^0.2.15"
langchain-openai = "^0.1.23"
langchain-qdrant = "^0.1.3"
html2text = "^2024.2.26"
qdrant-client = "^1.11.1"
aiohttp = "^3.10.5"
markitdown = "^0.0.1a3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
